# lotsman

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_django.py  bench_gin.py  bench_ripgrep.py  bench_vite.py  bench_wordpress.py
codemap/: __init__.py  __main__.py  cli.py  embed.py  extract.py  graph.py  impact.py  indexer.py  mcp_server.py  repomap.py  scanner.py  search.py  store.py
docs/: BENCHMARKS.md  DESIGN.md  DEVLOG.md  INTEGRATIONS.md  MANIFEST.md  PLAN.md  RELEASING.md
lotsman/: __init__.py  __main__.py  cli.py  doctor.py  embed.py  extract.py  graph.py  impact.py  indexer.py  init_cmd.py  mcp_server.py  querylog.py  refsview.py  repomap.py  scanner.py  search.py  sliceview.py  store.py  textutil.py  wiring.py
tests/: __init__.py  helpers.py  test_all.py  test_cli.py  test_doctor.py  test_extract.py  test_graph.py  test_impact.py  test_indexing.py  test_init.py  test_mcp.py  test_querylog.py  test_refsview.py  test_release.py  test_repomap.py  test_scanner.py  test_search.py  test_slice.py  test_textutil.py  test_wiring.py
