[project]
name = "lotsman"
version = "1.2.0"
description = "Local codebase index for AI agents: PageRank repo map, hybrid symbol search, reference graph, impact analysis, MCP server"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yuriy Rezunenko", email = "yuriy.rezunenko@gmail.com" }]
requires-python = ">=3.10"
keywords = ["ai-agents", "code-index", "tree-sitter", "repo-map", "mcp",
            "code-search", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.13",
]

[project.optional-dependencies]
embeddings = ["model2vec>=0.3"]

[project.scripts]
lotsman = "lotsman.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["lotsman*"]
